# flightsimulator-tools

./: CMakeLists.txt  CMakeSettings.json  Directory.Meta.props  FredrikHr FlightSimulator Tools.sln  LICENSE  MSFS_SDK.Version.props  MSFS_SDK.known-versions.json  README.md
.github/scripts/: CopySimConnectHeader.ps1  DownloadMSFS_SDK.ps1  ExecuteMSFS_SDKInstaller.ps1  GetGitHubActionsMSFS_SDKMatrix.ps1
.github/workflows/: dotnet.yml  generate-abi.yml  msfs-sdk-generate-abi.yml  msfs-sdk-main.yml  msfs_sdk_versions.yml
abi/SimConnect/: .gitignore  gen.csharp.rsp  gen.rsp  gen.xml.rsp
cmake/: FindMSFS_SDK.cmake  FindSimConnect.cmake
sample/FredrikHr.MsFlightSimulatorTools.SimConnectLoader.Console/: FredrikHr.MsFlightSimulatorTools.SimConnectLoader.Console.csproj  GlobalSuppressions.cs  Program.cs
src/FredrikHr.MsFlightSimulatorTools.SimConnect.Extensions/: Class1.cs  FredrikHr.MsFlightSimulatorTools.SimConnect.Extensions.csproj
src/FredrikHr.MsFlightSimulatorTools.SimConnectConsoleNative/: CMakeLists.txt  main.c  main.cpp
src/FredrikHr.MsFlightSimulatorTools.SimConnectLoader/: FredrikHr.MsFlightSimulatorTools.SimConnectLoader.csproj  NativeMethods.txt  SimConnectApplication.cs  SimConnectAssemblyPath.cs  SimConnectLibrary.cs
src/FredrikHr.MsFlightSimulatorTools.SimConnectSdk/: FredrikHr.MsFlightSimulatorTools.SimConnectSdk.csproj  GlobalSuppressions.cs  MsFsSdkSimConnectLocator.cs  NativeMethods.txt  SimConnectLibraryPath.cs  SimConnectNativeMethods.cs  SimConnectSessionHandle.cs
src/FredrikHr.MsFlightSimulatorTools.SimVarsCtrl/: FredrikHr.MsFlightSimulatorTools.SimVarsCtrl.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs  SimConnectPathSelectDialog.Designer.cs  SimConnectPathSelectDialog.cs  SimConnectPathSelectDialog.resx
test/FredrikHr.MsFlightSimulatorTools.Test/: FredrikHr.MsFlightSimulatorTools.Test.csproj  GlobalSuppressions.cs
test/FredrikHr.MsFlightSimulatorTools.Test/SimConnectLoader.Test/: SimConnectAssemblyPathTest.cs
test/FredrikHr.MsFlightSimulatorTools.Test/Test.CustomTestAttributes/: FactIfMsfsSdkSetAttribute.cs  TheoryIfMsfsSdkIsSetAttribute.cs
